@@ -50,14 +50,14 @@ static const char usage[] =
             "\amilliseconds\a; the default is no delay]"
         "[i \are\a?read a line from the master; if it matches \are\a "
             "then execute lines until matching \be\b or \bf\b]"
-        "[e [re]]?else [if match re]] then execute lines until matching "
-            "\be\b or \bf\b]"
+        "[e [\are\a]]?else [if match \are\a]] then execute lines until "
+            "matching \be\b or \bf\b]"
         "[f?end of \bi\b/\be\b block]"
         "[m \atext\a?write \atext\a to the standard error]"
         "[p \atext\a?peek input until \atext\a is found at the beginning "
             "of a line; input is not consumed]"
         "[r [\are\a]]?read a line from the master [and it should match "
-            "re]]]"
+            "\are\a]]]"
         "[s \amilliseconds\a?sleep for \amilliseconds\a]"
         "[t \amilliseconds\a?set the master read timeout to "
             "\amilliseconds\a; the default is \b1000\b]"
